# rdma-playground

./: .clang-format  .gitignore  Makefile  Readme.md  barebones_runall_dcl.sh  barebones_runall_dcl_rereg.sh  config  config.1.toml  consensus-protocol.c  consensus-protocol.h  deploy-3m.sh  deploy-5m.sh  deploy-7m.sh  deploy-9m.sh  deploy.sh  deploy_redis-3m.sh  deploy_redis-5m.sh  deploy_redis-7m.sh  deploy_redis-9m.sh  deploy_redis.sh  flushmemcached.py  ibv_layer.c  ibv_layer.h  leader-election.c  leader-election.h  log.h  meson.build  parser.c  parser.h  propose_api.c  propose_api.h  propose_main.c  rdma-consensus-common-case.c  rdma-consensus.c  rdma-consensus.h  rdma-many-clients-many-mrs.c  rdma-permission-switch.c  rdma-permission-test.c  rdma-wait-for-n.c  rdma-write-wait-read-wait.c  (+7 more)
config/: config.0.toml  config.2.toml
config/helvetios/: config.h214.toml
config/helvetios/3/: config.h193.toml  config.h194.toml  config.h195.toml
config/helvetios/5/: config.h193.toml  config.h194.toml  config.h195.toml  config.h199.toml  config.h200.toml
config/helvetios/7/: config.h193.toml  config.h194.toml  config.h195.toml  config.h199.toml  config.h200.toml  config.h202.toml  config.h203.toml
config/helvetios/9/: config.h193.toml  config.h194.toml  config.h195.toml  config.h199.toml  config.h200.toml  config.h202.toml  config.h203.toml  config.h210.toml  config.h211.toml
deployers/: deploy-3m.sh  deploy-5m.sh  deploy-7m.sh  deploy-9m.sh  deploy.sh  deploy_memcached-5m.sh  deploy_memcached-7m.sh  deploy_memcached-9m.sh  deploy_memcached.sh
include/: barrier.h  consensus-protocol.h  constants.h  context.h  ibv_layer.h  leader-election.h  log.h  meson.build  parser.h  propose_api.h  rdma-consensus.h  registry.h  timers.h  utils.h
memcached/: Readme.md  install_1.2.6.sh  install_1.5.19.sh  instruction.txt  patch.diff  patch1.2.6.diff  patch1.5.19-v2.diff  patch1.5.19-v4.diff  patch1.5.19.diff
memcached/librdmaconsensus_dummy/: create_so.sh
memcached/memcached-1.5.19/: Makefile  memcached.c  memcached.h  restart.c
old/: file_test.c  rdma-consensus-common-case.c  rdma-many-clients-one-mr.c
redis/: compile-redis.sh  patch-2.8.17-v2.diff  patch.diff  redis-5.conf
redis/librdmaconsensus_dummy/: main.c
redis/redis-5.0.5/src/: .nfs0000000005751e2400005caf  Makefile  networking.c  server.c
src/: ibv_layer.c  leader-election.c  meson.build  propose_api.c  propose_main.c  redis_latency.c  registry.c  test.c  tests.cpp
src/rdmaconsensus/: consensus-protocol.c  ibv_layer.c  leader-election.c  meson.build  parser.c  propose_api.c  propose_api_old.c  propose_api_old_counter.c  rdma-consensus.c  registry.c  utils.c
tools/: flush_memcached.py
